fix overflow issue

--- a/nwcc_pyramid/static/theme.css
+++ b/nwcc_pyramid/static/theme.css
@@ -31,7 +31,7 @@ body {
   margin: 0;
   padding: 0;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
